istio/routes.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: shopping-routes
  namespace: istio-system
spec:
  hosts:
  - shopping.demo
  gateways:
  - shopping-gateway
  http:
  - match:
    - uri:
        prefix: /
    rewrite:
      uri: /startpage/istio
    route:
    - destination:
        host: gateway.shopping-demo.svc.cluster.local
        port:
          number: 8080
